--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,6 @@ body {
 
 .section-header {
   background: url("/image/Rectangle 464.png") no-repeat 50% 50%;
-  width: 1900px;
   height: 910px;
   background-size: cover;
   position: relative;
@@ -506,4 +505,76 @@ body {
   font-size: 18px;
   line-height: 28px;
   padding-left: 14px;
+}
+
+.section-ad {
+  position: relative;
+  height: 1537px;
+  font-family: "Montserrat", sans-serif;
+}
+.section-ad-personal {
+  position: absolute;
+  display: flex;
+}
+.section-ad-personal-b {
+  padding-left: 82px;
+}
+.section-ad-personal-b-title {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 43.88px;
+  margin-bottom: 24px;
+}
+.section-ad-personal-b-subtitle {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29.26px;
+  margin-bottom: 12px;
+}
+.section-ad-personal-b-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  width: 496px;
+}
+.section-ad-a {
+  position: absolute;
+  top: 550px;
+  right: 0;
+}
+.section-ad-b {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+}
+.section-ad-c {
+  position: absolute;
+  top: 899px;
+  left: 701px;
+}
+.section-ad-d {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+}
+.section-ad-e {
+  position: absolute;
+  bottom: 0px;
+  text-align: center;
+  left: 40%;
+  width: 388px;
+}
+.section-ad-e-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29.25px;
+  margin-bottom: 22px;
+}
+.section-ad-e-title .red {
+  color: #a92a1d;
+}
+.section-ad-e-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
 }
