--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,8 @@ body {
 .section-ad-c {
   position: absolute;
   top: 899px;
-  left: 701px;
+  left: 50%;
+  transform: translate(-50%);
 }
 .section-ad-d {
   position: absolute;
@@ -561,7 +562,8 @@ body {
   position: absolute;
   bottom: 0px;
   text-align: center;
-  left: 40%;
+  left: 50%;
+  transform: translate(-50%);
   width: 388px;
 }
 .section-ad-e-title {
@@ -577,4 +579,48 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 26px;
+}
+
+.section-mail {
+  height: 939px;
+  background: url("/image/Rectangle 486.png");
+  background-size: cover;
+}
+.section-mail-content {
+  height: 786px;
+}
+.section-mail-content-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Montserrat", sans-serif;
+}
+.section-mail-content-list-title {
+  font-weight: 600;
+  font-size: 36px;
+  margin-top: 140px;
+}
+.section-mail-content-list-subtitle {
+  font-weight: 400;
+  font-size: 18px;
+  margin-top: 16px;
+  margin-bottom: 26px;
+}
+.section-mail-content-list-mail {
+  margin-bottom: 16px;
+}
+.section-mail-content-list-mail input {
+  text-align: center;
+  background: rgba(255, 255, 255, 0.15);
+  border: none;
+  outline: none;
+  height: 60px;
+  width: 402px;
+}
+.section-mail-content-list-mail input::placeholder {
+  color: #ffffff;
+}
+.section-mail-content-list-submit button {
+  height: 60px;
+  width: 402px;
 }
