--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,9 @@ body {
   background-color: #000000;
   color: #ffffff;
 }
+body .red {
+  color: #a92a1d;
+}
 
 .section-header {
   background: url("/image/Rectangle 464.png") no-repeat 50% 50%;
@@ -381,9 +384,6 @@ body {
 }
 .section-header-content-left-subtitle {
   display: flex;
-}
-.section-header .red {
-  color: #a92a1d;
 }
 .section-header-content-l {
   display: flex;
@@ -585,6 +585,7 @@ body {
   height: 939px;
   background: url("/image/Rectangle 486.png");
   background-size: cover;
+  margin-bottom: 150px;
 }
 .section-mail-content {
   height: 786px;
@@ -623,4 +624,123 @@ body {
 .section-mail-content-list-submit button {
   height: 60px;
   width: 402px;
+}
+
+.section-footer {
+  font-family: "Poppins", sans-serif;
+}
+.section-footer-content {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 150px;
+  margin-right: 228px;
+}
+.section-footer-content-rg {
+  display: flex;
+  flex-direction: column;
+}
+.section-footer-content-rg-rgym {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 54px;
+  margin-bottom: 4px;
+}
+.section-footer-content-rg-lor {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 36px;
+  width: 379px;
+  height: 109px;
+}
+.section-footer-content-info {
+  display: flex;
+  flex-direction: column;
+}
+.section-footer-content-info-inform {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 21px;
+  margin-bottom: 45px;
+}
+.section-footer-content-info-list {
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  width: 81px;
+  height: 168px;
+  justify-content: space-between;
+}
+.section-footer-content-more {
+  display: flex;
+  flex-direction: column;
+}
+.section-footer-content-more-morelinks {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 21px;
+  margin-bottom: 45px;
+}
+.section-footer-content-more-list {
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  width: 167px;
+  height: 168px;
+  justify-content: space-between;
+}
+.section-footer-content-fol {
+  display: flex;
+  flex-direction: column;
+}
+.section-footer-content-fol-follow {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 21px;
+  margin-bottom: 24px;
+}
+.section-footer-content-fol-pic {
+  display: flex;
+  justify-content: space-between;
+}
+.section-footer-content-fol-pic-f {
+  height: 43px;
+  width: 43px;
+  background: #292929;
+}
+.section-footer-content-fol-pic-f img {
+  margin-top: 50%;
+  margin-left: 50%;
+  transform: translate(-50%, -50%);
+}
+.section-footer-content-fol-pic-t {
+  height: 43px;
+  width: 43px;
+  background: #292929;
+}
+.section-footer-content-fol-pic-t img {
+  margin-top: 50%;
+  margin-left: 50%;
+  transform: translate(-50%, -50%);
+}
+.section-footer-content-fol-pic-i {
+  height: 43px;
+  width: 43px;
+  background: #292929;
+}
+.section-footer-content-fol-pic-i img {
+  margin-top: 50%;
+  margin-left: 50%;
+  transform: translate(-50%, -50%);
+}
+.section-footer-copyright {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  margin-top: 107px;
+  margin-bottom: 31px;
 }
