--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,9 @@ $color-black: #000000;
 body {
   background-color: $color-black;
   color: $color-white;
+  .red {
+    color: $color-red;
+  }
 }
 
 // === header ===
@@ -111,9 +114,6 @@ body {
         display: flex;
       }
     }
-  }
-  .red {
-    color: $color-red;
   }
 
   &-content {
@@ -365,6 +365,7 @@ body {
   height: 939px;
   background: url("/image/Rectangle\ 486.png");
   background-size: cover;
+  margin-bottom: 150px;
 
   &-content {
     height: 786px;
@@ -413,3 +414,140 @@ body {
 }
 
 // === / mail ===
+
+// === footer ===
+
+.section-footer {
+  @include font-secondary;
+  &-content {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 150px;
+    margin-right: 228px;
+
+    &-rg {
+      display: flex;
+      flex-direction: column;
+      &-rgym {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 54px;
+        margin-bottom: 4px;
+      }
+
+      &-lor {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 36px;
+        width: 379px;
+        height: 109px;
+      }
+    }
+
+    &-info {
+      display: flex;
+      flex-direction: column;
+      &-inform {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 21px;
+        margin-bottom: 45px;
+      }
+
+      &-list {
+        display: flex;
+        flex-direction: column;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 24px;
+        width: 81px;
+        height: 168px;
+        justify-content: space-between;
+      }
+    }
+
+    &-more {
+      display: flex;
+      flex-direction: column;
+
+      &-morelinks {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 21px;
+        margin-bottom: 45px;
+      }
+
+      &-list {
+        display: flex;
+        flex-direction: column;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 24px;
+        width: 167px;
+        height: 168px;
+        justify-content: space-between;
+      }
+    }
+
+    &-fol {
+      display: flex;
+      flex-direction: column;
+
+      &-follow {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 21px;
+        margin-bottom: 24px;
+      }
+
+      &-pic {
+        display: flex;
+        justify-content: space-between;
+
+        &-f {
+          img {
+            margin-top: 50%;
+            margin-left: 50%;
+            transform: translate(-50%, -50%);
+          }
+          height: 43px;
+          width: 43px;
+          background: #292929;
+        }
+
+        &-t {
+          img {
+            margin-top: 50%;
+            margin-left: 50%;
+            transform: translate(-50%, -50%);
+          }
+          height: 43px;
+          width: 43px;
+          background: #292929;
+        }
+
+        &-i {
+          img {
+            margin-top: 50%;
+            margin-left: 50%;
+            transform: translate(-50%, -50%);
+          }
+          height: 43px;
+          width: 43px;
+          background: #292929;
+        }
+      }
+    }
+  }
+
+  &-copyright {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    margin-top: 107px;
+    margin-bottom: 31px;
+  }
+}
+
+// === / footer ===
