--- a/scss/style.scss
+++ b/scss/style.scss
@@ -206,15 +206,15 @@ body {
     }
 
     &-text {
-      width: 1100px;
+      width: 790px;
       height: 93px;
 
       font-weight: 400;
       font-size: 18px;
       line-height: 26px;
 
-      margin-left: 405px;
-      margin-right: 405px;
+      margin-left: auto;
+      margin-right: auto;
       text-align: center;
       margin-bottom: 8px;
     }
@@ -363,7 +363,7 @@ body {
 
 .section-mail {
   height: 939px;
-  background: url("/image/Rectangle\ 486.png");
+  background: url("/image/Rectangle\ 486.png") no-repeat 50% 50%;
   background-size: cover;
   margin-bottom: 150px;
 
