--- a/css/style.css
+++ b/css/style.css
@@ -335,61 +335,62 @@ body .red {
   transform: rotate(180deg);
 }
 .section-header-cap {
+  display: flex;
   position: relative;
   z-index: 10;
-  display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .section-header-cap-left {
   display: flex;
+  width: 100%;
 }
 .section-header-cap-left-logo {
   font-family: "Poppins", sans-serif;
   font-size: 36px;
   line-height: 54px;
   font-weight: 700;
-  margin-left: 150px;
   margin-top: 28px;
 }
 .section-header-cap-left-clock {
-  margin-left: 37px;
   margin-top: 45px;
 }
 .section-header-cap-left-time {
-  margin-left: 13px;
   margin-top: 39px;
   padding-top: 8px;
   padding-bottom: 8px;
 }
-.section-header-cap-right-link {
+.section-header-cap-right {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 32px;
-  list-style: none;
-  display: flex;
   margin-top: 39px;
-  margin-right: 174px;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
-.section-header-cap-right-link li + li {
-  margin-left: 63px;
+@media (max-width: 1199px) {
+  .section-header-cap {
+    flex-direction: column;
+  }
+  .section-header-cap-left {
+    justify-content: space-around;
+  }
+}
+@media (min-width: 1200px) {
+  .section-header-cap-left-logo {
+    margin-left: 150px;
+  }
+  .section-header-cap-left-clock {
+    margin-left: 37px;
+  }
+  .section-header-cap-left-time {
+    margin-left: 13px;
+  }
 }
 .section-header-content {
   display: flex;
   justify-content: space-between;
-}
-.section-header-content-left {
-  display: flex;
-  flex-direction: column;
-}
-.section-header-content-left-subtitle {
-  display: flex;
-}
-.section-header-content-l {
-  display: flex;
-  flex-direction: column;
-  margin-top: 336px;
-  margin-left: 150px;
 }
 .section-header-content-l-title {
   display: flex;
@@ -398,8 +399,6 @@ body .red {
   margin-right: 17px;
 }
 .section-header-content-l-title-text {
-  width: 460px;
-  height: 219px;
   font-weight: 700;
   font-size: 60px;
   line-height: 73.14px;
@@ -411,7 +410,6 @@ body .red {
 .section-header-content-l-subtitle {
   display: flex;
   margin-left: 149px;
-  margin-bottom: 242px;
 }
 .section-header-content-l-subtitle-button {
   background-color: #a92a1d;
@@ -429,7 +427,6 @@ body .red {
   border: 0;
 }
 .section-header-content-r {
-  margin-right: 80px;
   margin-top: 325px;
 }
 .section-header-content-r-facebook {
@@ -437,6 +434,49 @@ body .red {
 }
 .section-header-content-r-twitter {
   margin-bottom: 48px;
+}
+@media (max-width: 575px) {
+  .section-header-content-l {
+    margin-top: 200px;
+    margin-left: 10px;
+  }
+  .section-header-content-l-title-text {
+    width: 180px;
+  }
+  .section-header-content-r {
+    margin-top: 230px;
+    margin-right: 10px;
+  }
+}
+@media (min-width: 576px) and (max-width: 1199px) {
+  .section-header-content-l {
+    margin-top: 200px;
+    margin-left: 10px;
+  }
+  .section-header-content-l-title-text {
+    width: 350px;
+  }
+  .section-header-content-r {
+    margin-top: 230px;
+    margin-right: 10px;
+  }
+}
+@media (min-width: 1200px) {
+  .section-header-content-l {
+    margin-top: 336px;
+    margin-left: 150px;
+  }
+  .section-header-content-l-title-text {
+    width: 460px;
+    height: 219px;
+  }
+  .section-header-content-l-subtitle {
+    margin-bottom: 242px;
+  }
+  .section-header-content-r {
+    margin-right: 80px;
+    margin-top: 325px;
+  }
 }
 
 .section-promo-popular {
@@ -649,7 +689,7 @@ body .red {
   font-weight: 400;
   font-size: 18px;
   line-height: 36px;
-  width: 379px;
+  width: 279px;
   height: 109px;
 }
 .section-footer-content-info {
