--- a/css/style.css
+++ b/css/style.css
@@ -831,6 +831,8 @@ body .red {
 .section-footer-content-rg {
   display: flex;
   flex-direction: column;
+  padding-bottom: 40px;
+  padding-right: 15px;
 }
 .section-footer-content-rg-rgym {
   font-weight: 700;
@@ -848,6 +850,8 @@ body .red {
 .section-footer-content-info {
   display: flex;
   flex-direction: column;
+  padding-bottom: 40px;
+  padding-right: 15px;
 }
 .section-footer-content-info-inform {
   font-weight: 500;
@@ -868,6 +872,8 @@ body .red {
 .section-footer-content-more {
   display: flex;
   flex-direction: column;
+  padding-bottom: 40px;
+  padding-right: 15px;
 }
 .section-footer-content-more-morelinks {
   font-weight: 500;
@@ -888,6 +894,7 @@ body .red {
 .section-footer-content-fol {
   display: flex;
   flex-direction: column;
+  padding-bottom: 40px;
 }
 .section-footer-content-fol-follow {
   font-weight: 500;
@@ -928,6 +935,11 @@ body .red {
   margin-top: 50%;
   margin-left: 50%;
   transform: translate(-50%, -50%);
+}
+@media (max-width: 1199px) {
+  .section-footer-content {
+    flex-wrap: wrap;
+  }
 }
 .section-footer-copyright {
   font-weight: 400;
